# BangMath

./: .gitignore  CMakeLists.txt  format-code.sh
include/BangMath/: AABox.h  AABox.tcc  AARect.h  AARect.tcc  All.h  Axis.h  Box.h  Box.tcc  Color.h  Color.tcc  Defines.h  Geometry.h  Geometry.tcc  Math.h  Math.tcc  Matrix3.h  Matrix3.tcc  Matrix4.h  Matrix4.tcc  Orientation.h  Plane.h  Plane.tcc  Polygon.h  Polygon.tcc  Polygon2D.h  Polygon2D.tcc  Quad.h  Quad.tcc  Quaternion.h  Quaternion.tcc  Random.h  Random.tcc  Ray.h  Ray.tcc  Ray2D.h  Ray2D.tcc  Rect.h  Rect.tcc  Segment.h  Segment.tcc  (+18 more)
